Updated CSS styles to fix the spacing between the header section and the rest of the page

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 .page-wrapper {
   display: flex;
   flex-direction: column;
-  height: 200rem;
+  height: 120rem;
   justify-content: center;
   overflow-x: hidden;
   align-items: center;
@@ -69,7 +69,6 @@ body {
   width: 100vw;
   margin: 0 auto;
   gap: 4rem;
-
 }
 
 .background {
@@ -362,7 +361,6 @@ h3 {
 
 /* TRENDING NOW SECTION */
 
-
 .trendingnow {
   position: relative;
   top: 110vh;
@@ -384,8 +382,6 @@ h3 {
   flex-direction: column;
   justify-content: flex-start;
   /* overflow-x: scroll; */
-  
-  
 }
 
 .reasons-section {
@@ -395,7 +391,6 @@ h3 {
   flex-direction: column;
   justify-content: flex-start;
   color: white;
-
 }
 
 .faq-section {
@@ -406,7 +401,6 @@ h3 {
   justify-content: flex-start;
   color: white;
   gap: 1rem;
-
 }
 .topten {
   display: flex;
@@ -430,7 +424,6 @@ h3 {
   width: 180px;
   position: relative;
   flex-shrink: 0;
-
 }
 
 .topten-wrapper {
@@ -447,8 +440,6 @@ h3 {
   max-width: 100%;
   position: relative;
   padding-left: 60px;
-
-
 }
 
 .topten-wrapper::-webkit-scrollbar {
@@ -521,10 +512,7 @@ h3 {
   align-items: center;
   justify-content: flex-start;
   width: 100%;
-  
 }
-
-
 
 .nextbutton {
   display: flex;
@@ -533,9 +521,9 @@ h3 {
   justify-content: center;
   height: 100%;
   background-color: rgb(0, 0, 0);
-  padding-left: 1rem;;
+  padding-left: 1rem;
   padding-right: 100px;
-  z-index: 2
+  z-index: 2;
 }
 
 .narrowbutton {
@@ -621,14 +609,11 @@ h3 {
 
 /* REASONS TO JOIN */
 
-
 .reasons-wrapper {
   display: flex;
   flex-direction: row;
   gap: 16px;
   flex-wrap: wrap;
-
-
 }
 
 .reasons-card {
@@ -645,7 +630,6 @@ h3 {
   min-width: 16rem;
   min-height: 16.75rem;
   max-height: 17rem;
-
 }
 
 .reason-card-content {
@@ -675,7 +659,6 @@ h3 {
   flex-direction: column;
   gap: 16px;
   flex-wrap: wrap;
-
 }
 
 .faq-accordion {
@@ -709,7 +692,7 @@ h3 {
   max-width: 100%;
   display: flex;
   flex-direction: column;
-  color: rgb(255,255,255,0.7);
+  color: rgb(255, 255, 255, 0.7);
   gap: 2rem;
 }
 
@@ -719,7 +702,7 @@ h3 {
 }
 
 .questions a {
-  color: rgb(255,255,255,0.7);
+  color: rgb(255, 255, 255, 0.7);
 }
 
 .footer-items {
@@ -728,7 +711,7 @@ h3 {
 }
 
 .footer-items a {
-  color: rgb(255,255,255,0.7);
+  color: rgb(255, 255, 255, 0.7);
   font-size: 14px;
   font-weight: 400;
   line-height: 32px;
@@ -750,14 +733,13 @@ h3 {
 }
 
 .language {
-    display: flex;
-    border: none;
-    background-color: rgba(0, 0, 0, 0.7);
-    /* background-color: ; rgba(207, 207, 207, 0.7); */
-    color: white;
-    font-size: 16px;
-    width: 100%;
-
+  display: flex;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.7);
+  /* background-color: ; rgba(207, 207, 207, 0.7); */
+  color: white;
+  font-size: 16px;
+  width: 100%;
 }
 
 .leading-icon {
